--- a/src/main/java/style.css
+++ b/src/main/java/style.css
@@ -137,6 +137,9 @@ body {
     color: white;
     font-size: 20px;
     text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .container:hover .overlay {
